--- a/roles/elastic/ca-easyrsa/tasks/main.yml
+++ b/roles/elastic/ca-easyrsa/tasks/main.yml
@@ -20,45 +20,43 @@
   tags:
     - ca
 
-- name: Fetch ca 
-  delegate_to: node1
-  ansible.builtin.fetch:
-    src: "/tmp/{{ es_clustername }}.p12"
-    dest: "{{ local_install_dir }}/{{ es_clustername }}.p12"
-    flat: true
-  when: ca_provider == "easyrsa" and ca_p12.stat.exists == false 
-  tags:
-    - ca
-
-
-
-- name: Run command if ca.p12 does not exist
-  ansible.builtin.command:
-    cmd: /usr/share/elasticsearch/bin/elasticsearch-certutil ca --out "/tmp/{{ es_clustername }}.p12" --pass "{{es_clustername}}"
-    creates: "/tmp/{{ es_clustername }}.p12"
-  when: ca_provider == "easyrsa" and ca_p12.stat.exists == false
-  tags:
-    - ca
-
-- name: Fetch ca 
-  ansible.builtin.fetch:
-    src: "/tmp/{{ es_clustername }}.p12"
-    dest: "{{ local_install_dir }}/{{ es_clustername }}.p12"
-    flat: true
-  when: ca_provider == "easyrsa" and ca_p12.stat.exists == false 
-  tags:
-    - ca
-
 
 - name: Copy CA file 
   copy:
-    src: "{{ local_install_dir }}/{{ es_clustername }}.p12"
-    dest: "/etc/elasticsearch/certs/{{ es_clustername }}.p12"
+    src: "{{ local_install_dir }}/{{ es_clustername }}.crt"
+    dest: "/etc/elasticsearch/certs/{{ es_clustername }}.crt"
     owner: elasticsearch
     group: elasticsearch
   when: ca_provider == "easyrsa"
   tags:
     - ca
+
+
+- name: Create node  cert
+  ansible.builtin.command:
+    cmd: /usr/share/elasticsearch/bin/elasticsearch-certutil csr --ip "{{ ansible_eth0.ipv4.address }}"  --dns "{{ ansible_hostname}}" --name "{{ ansible_hostname }}.p12" --out "/etc/elasticsearch/certs/cert-{{ ansible_hostname }}.zip" 
+    creates: "/etc/elasticsearch/certs/cert-{{ ansible_hostname }}.zip"
+  when: ca_provider == "easyrsa"
+  tags:
+    - ca
+
+
+- name: Fetch ca 
+  ansible.builtin.fetch:
+    src: "/etc/elasticsearch/certs/cert-{{ ansible_hostname }}.zip"
+    dest: "{{ local_install_dir }}/cert-{{ ansible_hostname }}.zip"
+    flat: true
+  tags:
+    - ca
+
+- name: Extract node cert csr
+  unarchive:
+    src: "{{ local_install_dir}}/cert-{{ ansible_hostname }}.zip"
+    dest: "/tmp"
+  tags:
+    - ca
+
+
 
 - name: list  keystore
   shell: /usr/share/elasticsearch/bin/elasticsearch-keystore list
@@ -97,13 +95,6 @@
     - ca
 
 
-- name: Create node  cert
-  ansible.builtin.command:
-    cmd: /usr/share/elasticsearch/bin/elasticsearch-certutil cert --ca "/etc/elasticsearch/certs/{{ es_clustername }}.p12" --ca-pass "{{es_clustername}}" --ip "{{ ansible_eth0.ipv4.address }}"  --dns "{{ ansible_hostname}}" --name "{{ ansible_hostname }}.p12" --out "/etc/elasticsearch/certs/cert-{{ ansible_hostname }}.p12" --pass "{{es_clustername}}"
-    creates: "/etc/elasticsearch/certs/cert-{{ ansible_hostname }}.p12"
-  when: ca_provider == "easyrsa"
-  tags:
-    - ca
 
 - name: Change node cert owner
   ansible.builtin.file:
