--- a/roles/elastic/ca-easyrsa/tasks/main.yml
+++ b/roles/elastic/ca-easyrsa/tasks/main.yml
@@ -132,23 +132,38 @@
   tags:
     - ca
 
-
-
-
 - name: Create kibana  cert
   ansible.builtin.command:
-     cmd: /usr/share/elasticsearch/bin/elasticsearch-certutil cert --ca "/etc/elasticsearch/certs/{{ es_clustername }}.p12" --ca-pass "{{es_clustername}}"   --dns "{{ kbn_hostname }}" --name "{{ es_clustername}}-{{ kbn_hostname }}.p12" --out "/tmp/{{es_clustername}}-{{kbn_hostname }}.p12" --pass "{{es_clustername}}"
-     creates: "/tmp/{{ es_clustername}}-{{ kbn_hostname }}.p12"
-  when: ca_provider == "easyrsa" and ca_p12.stat.exists == false 
+     cmd: /usr/share/elasticsearch/bin/elasticsearch-certutil csr   --dns "{{ kbn_hostname }}" --name "{{ kbn_hostname}}" --out "/tmp/kibana-{{kbn_hostname }}.zip"
+     creates: "/tmp/kibana-{{ kbn_hostname }}.zip"
+  when: ca_provider == "easyrsa" 
   tags:
     - ca
 
 - name: Fetch kibana cert
   ansible.builtin.fetch:
-    src: "/tmp/{{es_clustername}}-{{ kbn_hostname }}.p12"
-    dest: "{{ local_install_dir }}/{{ es_clustername }}-{{ kbn_hostname}}.p12"
+    src: "/tmp/kibana-{{ kbn_hostname }}.zip"
+    dest: "{{ local_install_dir }}/kibana-{{ kbn_hostname}}.zip"
     flat: true
-  when:  ca_provider == "easyrsa" and ca_p12.stat.exists == false 
+  when:  ca_provider == "easyrsa" 
+  tags:
+    - ca
+
+
+- name: Extract kibana cert csr
+  delegate_to: localhost
+  unarchive:
+    src: "{{ local_install_dir}}/kibana-{{ kbn_hostname }}.zip"
+    dest: "/tmp"
+  tags:
+    - ca
+
+- name: Copy private key
+  delegate_to: localhost
+  copy:
+    src: "/tmp1/{{ ansible_hostname }}/{{ ansible_hostname }}.key"
+    dest: "{{ local_install_dir}}/{{ ansible_hostname }}.key"
+  when: ca_provider == "easyrsa"
   tags:
     - ca
 
