--- a/inventories/group_vars/easyrsa.yml
+++ b/inventories/group_vars/easyrsa.yml
@@ -8,3 +8,4 @@ er_port_mgt2: "3888"
 er_data_path: "{{ mount_logical_volume}}/easyrsa"
 er_config_file: "easyrsa.properties.j2"
 er_version: "3.0.8"
+er_rootca: "easyrsa-rootca"
