--- a/roles/elastic/ca-easyrsa/tasks/main.yml
+++ b/roles/elastic/ca-easyrsa/tasks/main.yml
@@ -2,6 +2,25 @@
 # tasks file for ca-easyrsa
 
 - name: create certs directory 
+  delegate_to: localhost
+  file:
+    path: "{{ local_install_dir }}/certs"
+    state: directory
+  when: ca_provider == "easyrsa"
+  tags:
+    - ca
+
+- name: create certs directory for cluster
+  delegate_to: localhost
+  file:
+    path: "{{ local_install_dir }}/certs/{{ es_clustername }}"
+    state: directory
+  when: ca_provider == "easyrsa"
+  tags:
+    - ca
+
+
+- name: create certs directory 
   file:
     path: /etc/elasticsearch/certs
     state: directory
@@ -11,26 +30,10 @@
   tags:
     - ca
 
-- name: create certs directory 
-  file:
-    path: "{{ local_install_dir }}/certs"
-    state: directory
-  when: ca_provider == "easyrsa"
-  tags:
-    - ca
-
-- name: create certs directory for cluster
-  file:
-    path: "{{ local_install_dir }}/certs/{{ es_clustername }}/{{ es_clustername}}"
-    state: directory
-  when: ca_provider == "easyrsa"
-  tags:
-    - ca
-
 - name: Check for local CA
   delegate_to: localhost
   stat:
-    path: "{{ local_install_dir }}/{{ es_clustername }}.crt"
+    path: "{{ local_install_dir }}/certs/{{ es_clustername }}.crt"
   register: ca
   when: ca_provider == "easyrsa"
   tags:
@@ -39,7 +42,7 @@
 
 - name: Copy root CA file 
   copy:
-    src: "{{ local_install_dir }}/certs/{{ es_clustername }}/{{ es_clustername }}.crt"
+    src: "{{ local_install_dir }}/certs/{{ er_clustername }}.crt"
     dest: "/etc/elasticsearch/certs/{{ es_clustername }}.crt"
     owner: elasticsearch
     group: elasticsearch
